the statistics are sent checking also if there is a proxy, to avoid connection error
git-svn-id: http://code.jaspersoft.com/svn/repos/jaspersoftstudio/trunk@6112 6833c83e-4fd0-4c68-a3df-283c6148db30